add swagget to product and fixed some issues
