# cmd/docs/swagger.yaml
@@ -5,6 +5,11 @@ definitions:
       message:
         type: string
     type: object
+  dto.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
   dto.LoginDTO:
     properties:
       email:
@@ -14,6 +19,22 @@ definitions:
     required:
     - email
     - password
+    type: object
+  dto.ProductCreateDTO:
+    properties:
+      description:
+        type: string
+      image:
+        type: string
+      price:
+        type: number
+      title:
+        type: string
+    required:
+    - description
+    - image
+    - price
+    - title
     type: object
   dto.RegisterDTO:
     properties:
@@ -28,6 +49,11 @@ definitions:
     properties:
       result:
         example: success
+        type: string
+    type: object
+  dto.SuccessResponse:
+    properties:
+      success:
         type: string
     type: object
 info:
@@ -101,4 +127,57 @@ paths:
       summary: Register a new user
       tags:
       - accounts
+  /product/create:
+    post:
+      consumes:
+      - application/json
+      description: Adds a new product to the system
+      parameters:
+      - description: Product data
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ProductCreateDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Create a new product
+      tags:
+      - Products
+  /products:
+    get:
+      consumes:
+      - application/json
+      description: Get All Products
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Get All products
+      tags:
+      - Products
 swagger: "2.0"
