# internal/product/dto/error.go
@@ -1,0 +1,9 @@
+package dto
+
+type ErrorResponse struct{
+	Error string `json:"error"`
+}
+
+type SuccessResponse struct{
+	Success string `json:"success"`
+}
