# internal/product/dto/product_dto.go
@@ -2,29 +2,38 @@ package dto
 
 import "github.com/sohibjon7731/ecommerce_backend/internal/product/model"
 
-
-type ProductDTO struct{
-	ID uint64 `json:"id"`
-	Image string `json:"image"`
-	Title string `json:"title"`
-	Price float64 `json:"price"`
-	Description string `json:"description"`
+type ProductCreateDTO struct {
+	Title       string  `json:"title" binding:"required"`
+	Description string  `json:"description" binding:"required"`
+	Price       float64 `json:"price" binding:"required"`
+	Image       string  `json:"image" binding:"required"`
 }
 
-func ToProductDTO(products model.Product) ProductDTO{
-	return ProductDTO{
-		ID: uint64(products.ID),
-		Image: products.Image,
-		Title: products.Title,
-		Price: products.Price,
-		Description: products.Description,
-	}
-} 
 
-func ConvertToProductDTOs(products []model.Product) []ProductDTO {
-	dtos := make([]ProductDTO, len(products))
+type ProductResponseDTO struct {
+	ID          uint  `json:"id"`
+	Title       string  `json:"title"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price"`
+	Image       string  `json:"image"`
+}
+
+
+func ToProductResponseDTO(product model.Product) ProductResponseDTO {
+	return ProductResponseDTO{
+		ID:          product.ID,
+		Title:       product.Title,
+		Description: product.Description,
+		Price:       product.Price,
+		Image:       product.Image,
+	}
+}
+
+
+func ConvertToProductResponseDTOs(products []model.Product) []ProductResponseDTO {
+	dtos := make([]ProductResponseDTO, len(products))
 	for i, product := range products {
-		dtos[i] = ToProductDTO(product)
+		dtos[i] = ToProductResponseDTO(product)
 	}
 	return dtos
 }
