# internal/product/model/product_model.go
@@ -1,12 +1,10 @@
 package model
 
-import "gorm.io/gorm"
-
 type Product struct{
-	gorm.Model
-	Image string `gorm:"type:varchar(255); not null"`
+	ID uint `gorm:"primaryKey;autoIncrement"`
 	Title string `gorm:"type:varchar(255); not null"`
-	Price float64 `gorm:"not null"`
 	Description string `gorm:"type:text; not null"`
+	Price float64 `gorm:"not null"`
+	Image string `gorm:"type:varchar(255); not null"`
 	
 }
